Added: Authentication and Authorization Added: Apply Leave Mutation Added: Checks for input validation Added: Error Handling

--- a/package.json
+++ b/package.json
@@ -18,18 +18,25 @@
     "@types/typescript": "^2.0.0",
     "apollo-server-express": "^3.5.0",
     "class-validator": "^0.13.1",
+    "connect-redis": "^6.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
+    "graphql": "^15.3.0",
+    "ioredis": "^4.28.0",
     "jsonwebtoken": "^8.5.1",
-    "graphql":"^15.3.0",
     "pg": "^8.7.1",
     "postgres": "^1.0.2",
     "reflect-metadata": "^0.1.13",
+    "ts-node-dev": "^1.1.8",
     "type-graphql": "^1.1.1",
     "typeorm": "^0.2.41"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/connect-redis": "0.0.17",
+    "@types/express-session": "^1.17.4",
+    "@types/ioredis": "^4.28.1",
     "@types/jsonwebtoken": "^8.5.6",
     "@types/node": "^16.11.7",
     "nodemon": "^2.0.15",
