--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "jest": {
+    "testMatch": [
+      "src/test/**/*.test.ts"
+    ]
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node-dev --respawn src/index.ts"
+    "start": "ts-node-dev --respawn src/index.ts",
+    "db:setup":"ts-node ./src/test-utils/setup.ts",
+    "test": "npm run db:setup && jest"
   },
   "repository": {
     "type": "git",
@@ -37,9 +43,14 @@
     "@types/connect-redis": "0.0.17",
     "@types/express-session": "^1.17.4",
     "@types/ioredis": "^4.28.1",
+    "@types/jest": "^27.0.3",
     "@types/jsonwebtoken": "^8.5.6",
     "@types/node": "^16.11.7",
+    "babel-core": "^6.26.3",
+    "babel-jest": "^27.3.1",
+    "jest": "^27.3.1",
     "nodemon": "^2.0.15",
+    "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2"
   }
