--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "start": "ts-node-dev --respawn src/index.ts",
-    "db:setup":"ts-node ./src/test-utils/setup.ts",
+    "db:setup": "ts-node ./src/test-utils/setup.ts",
     "test": "npm run db:setup && jest"
   },
   "repository": {
@@ -42,12 +42,14 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/connect-redis": "0.0.17",
     "@types/express-session": "^1.17.4",
+    "@types/faker": "^5.5.9",
     "@types/ioredis": "^4.28.1",
     "@types/jest": "^27.0.3",
     "@types/jsonwebtoken": "^8.5.6",
     "@types/node": "^16.11.7",
     "babel-core": "^6.26.3",
     "babel-jest": "^27.3.1",
+    "faker": "^5.5.3",
     "jest": "^27.3.1",
     "nodemon": "^2.0.15",
     "ts-jest": "^27.0.7",
